--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,47 @@
-.App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
+.elementor-post__card {
+  background-color:rgb(162, 233, 191);
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  align-items: center;
+  width: 400px;
+  border-radius: 10px;
+  padding-left: 10px;
+  color: green;
+
 }
 
-.App-link {
-  color: #61dafb;
+.elementor-post__text {
+  justify-content: center;
+  align-items: center;
+  background-color: rgb(197, 235, 197);
+  width: 480px;
+  border-radius: 10px;
+  padding-left: 10px;
+  color: black;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
+.elementor-posts-container {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+}
+
+.elementor-post {
+  flex: 0 0 calc(33.33% - 20px);
+  margin-bottom: 20px;
+  box-sizing: border-box;
+}
+
+@media (max-width: 720px) {
+  .elementor-post {
+    flex: 0 0 calc(50% - 20px);
   }
-  to {
-    transform: rotate(360deg);
-  }
+}
+
+h1 {
+  text-align: center;
+  color: rgb(66, 104, 10);
+}
+img{
+  height: 200px;
+  width: 400px;
 }
